fixed unordered list so bullet points appear

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -13,20 +13,22 @@
         <p>This is a recipe for Lasagna</p>
         <p>Lasagna is a classic low-cost homemade dish that is filling and makes for great leftovers</p>
     <h3>Ingredients</h3>
-        <ul>lasagna sheets</ul>
-        <ul>cheese</ul>
-        <ul>onion</ul>
-        <ul>garlic</ul>
-        <ul>carrot</ul>
-        <ul>celery</ul>
-        <ul>beef</ul>
-        <ul>canned tomato</ul>
-        <ul>tomato paste</ul>
-        <ul>beef stock cubes</ul>
-        <ul>bay leaves</ul>
-        <ul>thyme</ul>
-        <ul>oregano</ul>
-        <ul>worcestershire</ul>
+        <ul>
+            <li>lasagna sheets</li>
+            <li>cheese</li>
+            <li>onion</li>
+            <li>garlic</li>
+            <li>carrot</li>
+            <li>celery</li>
+            <li>beef</li>
+            <li>canned tomato</li>
+            <li>tomato paste</li>
+            <li>beef stock cubes</li>
+            <li>bay leaves</li>
+            <li>thyme</li>
+            <li>oregano</li>
+            <li>worcestershire</li>
+        </ul>
     <h3>Steps</h3>
         <ol>The traditional version is made using a mix of pork and beef. If you wish to do this, use 300g/10oz pork and 700g/1.4lb beef. Pork adds a bit of richness. I do not (usually) do this simply because I feel like the sauce is so beautifully rich anyway (especially with the cheese sauce).</ol>
         <ol>Use a bold red, like cab sauv, not a light one like pinot. You can skip the wine if you prefer, just use water instead, or beef broth/stock.</ol>
