added images, description, ingredients and steps content to complete the website

--- a/recipes/mapo_tofu.html
+++ b/recipes/mapo_tofu.html
@@ -8,8 +8,27 @@
 </head>
 <body>
     <h1>Mapo Tofu</h1>
+    <img src="../recipe-images/mapo-tofu-10.jpg" alt="Mapo Tofu Image">
     <h3>Description</h3>
+        <p>This is a recipe for Mapo Tofu</p>
+        <p>Mapo Tofu is a delicious asian dish that is very popular. Its a savoury and spicy soft tofu dish that melts in the mouth and gives your pallette an incredible numbing sensation!</p>
     <h3>Ingredients</h3>
+    <ul>
+        <li>Doubanjiang</li>
+        <li>Sichuan peppercorns</li>
+        <li>Chilli oil</li>
+        <li>Ground pork or beef</li>
+        <li>Green onions or spring onions</li>
+        <li>Cornstarch</li>
+        <li>Tofu</li>
+    </ul>
     <h3>Steps</h3>
+    <ol>
+        <li>Fry the Sichuan peppercorns in the oil to infuse the aroma</li>
+        <li>Cook the ground pork with doubanjiang</li>
+        <li>Once the pork is cooked, add the green onions and stir a few times</li>
+        <li>Add the broth and braise with the cover on</li>
+        <li>Drizzle in the cornstarch slurry to thicken the sauce</li>
+    </ol>
 </body>
 </html>
