--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
 <body>
     <h1>Odin Recipes</h1>
     <a href="recipes/lasagna.html">Lasagne</a>
+    <a href="recipes/pad_see_ew.html">Pad See Ew</a>
+    <a href="recipes/mapo_tofu.html">Mapo Tofu</a>
 </body>
 </html>
