Add Paragraph to each recipet to give slightly better structure

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/lasagna.html">Lasagne</a>
-    <a href="recipes/pad_see_ew.html">Pad See Ew</a>
-    <a href="recipes/mapo_tofu.html">Mapo Tofu</a>
+    <p><a href="recipes/lasagna.html">Lasagne</a></p>
+    <p><a href="recipes/pad_see_ew.html">Pad See Ew</a></p>
+    <p><a href="recipes/mapo_tofu.html">Mapo Tofu</a></p>
 </body>
 </html>
